Fix table cells spacing

--- a/themes/metro/scss/_variables.scss
+++ b/themes/metro/scss/_variables.scss
@@ -183,8 +183,10 @@ $headings-font-weight: normal;
 
 // Tables
 
-$table-cell-padding: 0.6em;
-$table-cell-padding-sm: $table-cell-padding;
+$table-cell-padding-y: 0.6em;
+$table-cell-padding-x: 0.6em;
+$table-cell-padding-y-sm: $table-cell-padding-y;
+$table-cell-padding-x-sm: $table-cell-padding-x;
 $table-bg: $bg-two;
 $table-head-bg: #fff;
 $table-head-color: $th-color;
