--- a/themes/pmahomme/scss/_variables.scss
+++ b/themes/pmahomme/scss/_variables.scss
@@ -76,8 +76,10 @@ $h3-font-size: 1rem;
 
 // Tables
 
-$table-cell-padding: 0.1em 0.3em;
-$table-cell-padding-sm: $table-cell-padding;
+$table-cell-padding-y: 0.1em;
+$table-cell-padding-x: 0.3em;
+$table-cell-padding-y-sm: $table-cell-padding-y;
+$table-cell-padding-x-sm: $table-cell-padding-x;
 $table-bg: #fff;
 $table-head-bg: #fff;
 $table-head-color: $th-color;
